--- a/index.html
+++ b/index.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./src/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <title>Frontend Mentor | Expenses chart component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
+
 <body>
+  <section class="balance-container">
+    <p class="balance-title">My balance</p>
+    <p class="balance-price">$921.48</p>
+  </section>
 
-  My balance
-  $921.48
+  <section class="spending-container">
+    <p><strong>Spending - Last 7 days</strong></p>
 
-  Spending - Last 7 days
+    <div class="chart-container">
+      <canvas id="myChart" style="width:340px;max-width:600px;height: 170px;"></canvas>
+    </div>
 
-  mon
-  tue
-  wed
-  thu
-  fri
-  sat
-  sun
+    <hr>
+    <div class="total-container">
+      <p>Total this month</p>
+      <div class="flex-container">
+        <p class="price">$478.33</p>
+        <div class="percent-container">
+          <p class="percent">+2.4%</p>
+          <p>from last month</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  Total this month
-  $478.33
-
-  +2.4%
-  from last month
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/jsuleyka" target="_blank">Suleyka Juarez</a>.</p>
   </div>
+
+  <script src="./src/main.js"></script>
 </body>
+
 </html>
