--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
 <body>
   <section class="balance-container">
-    <p class="balance-title">My balance</p>
-    <p class="balance-price">$921.48</p>
+    <div class="context-container">
+      <p class="balance-title">My balance</p>
+      <p class="balance-price">$921.48</p>
+    </div>
+    <div class="logo-container">
+      <img src="./images/logo.svg" alt="Logo">
+    </div>
   </section>
 
   <section class="spending-container">
